--- a/BinaryAddition.tex
+++ b/BinaryAddition.tex
@@ -18,7 +18,7 @@
 τα αριθμητικά συστήματα. Τελευταία περίπτωση είναι και η πιο περίπλοκη, όπου $1+1$ έχει άθροισμα μηδέν
 και ένα κρατούμενο. Στον πίνακα \ref{tb:HA_truth_table} παρουσιάζεται ο πίνακας αληθείας, δηλαδή ο 
 πίνακας που περιγράφει την συμπεριφορά των εξόδων, στην περίπτωση αυτή το άθροισμα (sum) και το 
-κρατούμενο ($c_out$), σύμφωνα με κάθε πιθανό συνδυασμό των εισόδων x και y.
+κρατούμενο ($c_{out}$), σύμφωνα με κάθε πιθανό συνδυασμό των εισόδων x και y.
 
 
 \begin{multicols}{2}
@@ -66,7 +66,7 @@
 
 
 
-Από τον ημιαθροιστής δομείται ο πλήρης αθροιστής ή Full-Adder (FA) με τρεις εισόδους x, y, z , δυο εξόδους sum και $c_{out}$ και λειτουργία αντίστοιχη του FA με την διαφορά πως ο FA προσθέτει τρία δυαδικά ψηφιά \\
+Από τον ημιαθροιστή δομείται ο πλήρης αθροιστής ή Full-Adder (FA) με τρεις εισόδους x, y, z , δυο εξόδους sum και $c_{out}$ και λειτουργία αντίστοιχη του FA με την διαφορά πως ο FA προσθέτει τρία δυαδικά ψηφιά \\
 \begin{multicols}{2}
 \begin{table}[H]
 \centering
@@ -123,7 +123,7 @@
 μια επέκταση της πρόσθεσης μεταξύ ψηφίων που παρουσιάστηκε προηγουμένως τροφοδοτώντας 
 το κρατούμενο εξόδου των προηγούμενων σημαντικών ψηφίων στην είσοδο του πλήρη αθροιστή 
 των επομένων. Συμβολίζοντας $c_{i}$ το κρατούμενο που παράγεται από την πρόσθεση των ψηφίων 
-$a_i+b_i$. Με αποτέλεσμα το κάθε ψηφίο αθροίσματος, εκτός του πρώτου, να υπολογίζεται από την 
+$a_i+b_i$. Επομένως το κάθε ψηφίο αθροίσματος, εκτός του πρώτου, να υπολογίζεται από την 
 λογική συνάρτηση:
 \begin{equation}
 \begin{split}
