--- a/modAdder.tex
+++ b/modAdder.tex
@@ -63,7 +63,7 @@
 αποτυπώνεται η απλή αρχιτεκτονική που περιγράφηκε.
 \begin{figure}[H]
 \centering
-\includegraphics[width=\textwidth]{Simple_2^n-1_adder.png}
+\includegraphics[height=4cm,width=9cm]{Simple_2^n-1_adder.png}
 \caption{Απλή δομή αθροιστή υπολοίπου $2^n-1$}
 \label{fig:2^n-1_simple_adder}
 \end{figure}
@@ -159,7 +159,7 @@ $c'_{n-1} = G'_{n-1}$
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=\textwidth]{2^n-1_simple_Prefix_structure.png}
+\includegraphics[width=height=6cm,width=9cm]{2^n-1_simple_Prefix_structure.png}
 \caption{Απλή δομή προθεματικού αθροιστή υπολοίπου $2^8-1$}
 \label{fig:2^n-1_simple_Prefix_structure}
 \end{figure}
@@ -314,7 +314,7 @@ $(g_{n-1},p_{n-1})$ αλλά, όπως έχει προαναφερθεί και 
 \begin{figure}[H]
 \centering
 % \includegraphics[width=\textwidth]{2^8-1_new_structure.png}
-\includegraphics[scale=0.5]{2^8-1_new_structure.png}
+\includegraphics[width=height=6cm,width=9cm]{2^8-1_new_structure.png}
 \caption{Παράλληλος προθεματικός αθροιστής υπολοίπου $2^8-1$}
 \label{fig:2^8-1_new_structure}
 \end{figure}
