--- a/titlepage.tex
+++ b/titlepage.tex
@@ -11,9 +11,9 @@
 	%	Headings
 	%------------------------------------------------
 	
-	\textsc{\LARGE Τμήμα Μηχανικών Ηλεκτρονικών Υπολογιστών και Πληροφορικής}\\[1.5cm]
-	\textsc{\Large Πανεπιστήμιο Πάτρας}\\[0.5cm] 
-	\textsc{\large \today}\\[0.5cm]
+	\textsc{\LARGE ΤΜΗΜΑ ΜΗΧΑΝΙΚΏΝ ΗΛΕΚΤΡΟΝΙΚΩΝ ΥΠΟΛΟΓΙΣΤΩΝ ΚΑΙ ΠΛΗΡΟΦΟΡΙΚΗΣ}\\[1.5cm]
+	\textsc{\Large ΠΑΝΕΠΙΣΤΗΜΙΟ ΠΑΤΡΑΣ}\\[0.8cm] 
+	\textsc{\large \today}\\[1cm]
 	
 	%------------------------------------------------
 	%	Title
@@ -27,23 +27,31 @@
 	%------------------------------------------------
 	%	Author(s)
 	%------------------------------------------------
-	
-	\begin{minipage}{0.4\textwidth}
-		\begin{flushleft}
-			\large
-			\textit{Author}\\
-			Βάσιλας Κωνσταντίνος % Your name
-		\end{flushleft}
-	\end{minipage}
-	~
-	\begin{minipage}{0.4\textwidth}
-		\begin{flushright}
-			\large
-			\textit{Supervisor}\\
-			Βέργος Χαρίδημος  % Supervisor's name
-		\end{flushright}
-	\end{minipage}
+% 	\vfill % Push the date up 1/4 of the remaining page
+% 	\begin{minipage}{0.4\textwidth}
+% 		\begin{flushleft}
+% 			\large
+% 			\textit{Συγγραφέας}\\
+% 			\textbf{Βάσιλας Κωνσταντίνος} % Your name
+% 		\end{flushleft}
+% 	\end{minipage}
+% 	~
+% 	\begin{minipage}{0.4\textwidth}
+% 		\begin{flushright}
+% 			\large
+% 			\textit{Επιβλέπον καθηγητής}\\
+% 			\textbf{Βέργος Χαρίδημος}  % Supervisor's name
+% 		\end{flushright}
+% 	\end{minipage}
 
+	\vfill % Push the date up 1/4 of the remaining page
+
+    \begin{center}
+        Βάσιλας Κωνσταντίνος\\[1.5cm]
+        
+        Επιβλέπον καθηγητής\\
+        Βέργος Χαρίδημος
+    \end{center}
 	 
 	%----------------------------------------------------------------------------------------
 	
