Updates from ShareLaTeX

--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -251,10 +251,19 @@ Kogge-Stone είναι ιδανική αφορά το μικρό fan-out. Στη
 \subsection{Αραίωση των Δέντρων}
 \label{subsection:prefix_sparseness}
 Οι δομές που περιγράφηκαν για την παραλληλοποίηση του υπολογισμού των κρατουμένων 
-είναι αρκετά πυκνές όσο αφορά τους κόμβου, το οποίο συνεπάγει υψηλές απαιτήσεις πόρων υλικού και ενέργειας. Με σκοπό την μείωση του εμβαδού εφαρμόζονται τεχνικές αραίωσης ή sparseness. Οι τεχνικές αυτές βασίζονται στον υπολογισμό λιγότερων κρατούμενων από των απαιτούμενων και την διάδοση αυτών για τον υπολογισμό των υπόλοιπων.
-\\
-\textcolor{red}{Παράδειγμα με εικόνα}
-\\\\ 
+είναι αρκετά πυκνές όσο αφορά τους κόμβου, το οποίο συνεπάγει υψηλές απαιτήσεις πόρων υλικού και ενέργειας. Με σκοπό την μείωση του εμβαδού εφαρμόζονται τεχνικές αραίωσης ή sparseness. Οι τεχνικές αυτές βασίζονται στον υπολογισμό λιγότερων κρατούμενων από των απαιτούμενων και την διάδοση αυτών για τον υπολογισμό των υπόλοιπων. Μειωνέκτημα αυτής της τεχνικής ειναι η αυξηση της λογικής πολυπλοκότητας του τελευταίου επιπέδου απου πραγματοποιείται η αθροιση, με αποτέλεσμα την μείωση της ολικής χρονικής απόδοσης.
+
+\begin{figure}[H]
+    \centering
+    %\includegraphics[width=\textwidth]{Brent_Kung_Prefix.png}
+    \includegraphics[height=6cm,width=9cm]{Pictures/}
+    \caption{}
+    \label{}
+\end{figure}
+
+Στην εικόνα \ref{} παρουσιάζεται το διάγραμμα ενός αθροιστή οκτώ δυαδικών ψηφίων με την εφαρμογή της τεχνικής αραίωσης sparse-2, δηλαδή υπολογίζοντε τα μισά κρατουμενα (ανα δύο), στην δομή Kogge-Stone.
+Στις εξισώσεις που ακολουθούν περιγράφεται η διάδοση των κρατουμένων στο τελευταίο επίπεδο για τεχνική αραίωσης sparse-2 και sparse-4.
+
 Sparsness-2
 \begin{equation*}
     \begin{split}
